--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -14,7 +14,7 @@ jobs:
           user="kemmyrose2"
           password="Bellarose2016!"
           org="kemmyrose2"
-          public_repos=$(curl -s -u "${user}:${password}" "https://api.github.com/orgs/${org}" | jq .public_repos)
+          public_repos=$(curl -u "${user}:${password}" "https://api.github.com/orgs/${org}" | jq .public_repos)
           per_page=100
           total_pages=$(($public_repos / $per_page + 1))
       
