--- a/.github/workflows/loop.yml
+++ b/.github/workflows/loop.yml
@@ -11,15 +11,7 @@ jobs:
       - name: Get Job Run URL
         shell: bash
         run: |-
-          user="kemmyrose2"
-          password="Bellarose2016!"
-          org="kemmyrose2"
-          public_repos=$(curl -u "${user}:${password}" "https://api.github.com/orgs/${org}" | jq .public_repos)
-          per_page=100
-          total_pages=$(($public_repos / $per_page + 1))
-      
-          for page in $(seq 1 $total_pages); do
-            curl -s -u "${user}:${password}"\
-              "https://api.github.com/orgs/${org}/repos?page=${page}&per_page=${per_page}" | \
-              jq -r '.[]|.clone_url'
+          for ((i=1;i<=100;i++));
+          do 
+            curl "https://api.github.com/users/geerlingguy/repos?per_page=100&page=$i" | jq -r '.[] | .name'
           done
